--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-router": "^3.1.3",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.1.2"
     },
     "dependencies": {
         "core-js": "^3.4.8",
